build: add validation, serialization, base jwt auth

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,11 @@
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
+    "globals": {
+        "Config": true
+    },
     "rules": {
+        "@typescript-eslint/no-floating-promises": "off",
+        "@typescript-eslint/strict-boolean-expressions": "off"
     }
 }
