--- a/package.json
+++ b/package.json
@@ -2,22 +2,25 @@
   "name": "meta-api",
   "version": "1.0.0",
   "description": "REST API for Meta project, education and exam preparation platform.",
-  "main": "index.js",
+  "author": "Dmytro Bielousov demetrxx@gmail.com",
+  "license": "ISC",
+  "main": "server.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "nodemon index.ts",
-    "start:prod": "node index.js",
-    "prisma:update": "prisma migrate dev",
+    "start": "NODE_ENV=development nodemon server.ts",
+    "start:prod": "NODE_ENV=production node ./dist/server.js",
+    "prisma:migrate": "prisma migrate dev",
     "lint": "eslint \"**/*.ts\" --fix",
     "prettier": "npx prettier \"**/*.ts\" --write",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Dmytro Bielousov demetrxx@gmail.com",
-  "license": "ISC",
   "dependencies": {
+    "@fastify/jwt": "^7.2.1",
     "@prisma/client": "5.3.1",
     "fastify": "^4.23.2",
-    "fastify-plugin": "^4.5.1"
+    "fastify-plugin": "^4.5.1",
+    "fluent-json-schema": "^4.2.0-beta.0",
+    "http-errors": "^2.0.0"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.2",
@@ -32,12 +35,16 @@
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "nodemon": "^3.0.1",
+    "pino-pretty": "^10.2.0",
     "prettier": "3.0.3",
     "prisma": "^5.3.1",
     "ts-node": "^10.9.1",
-    "typescript": "*"
+    "typescript": "5.2.2"
   },
   "lint-staged": {
-    "**/*.ts": ["eslint --fix", "prettier --write --ignore-unknown"]
+    "**/*.ts": [
+      "eslint --fix",
+      "prettier --write --ignore-unknown"
+    ]
   }
 }
