--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "server.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "NODE_ENV=development nodemon server.ts",
+    "start": "nodemon server.ts",
     "start:prod": "NODE_ENV=production node ./dist/server.js",
     "prisma:migrate": "prisma migrate dev",
     "lint": "eslint \"**/*.ts\" --fix",
@@ -17,6 +17,7 @@
   "dependencies": {
     "@fastify/jwt": "^7.2.1",
     "@prisma/client": "5.3.1",
+    "env-schema": "^5.2.0",
     "fastify": "^4.23.2",
     "fastify-plugin": "^4.5.1",
     "fluent-json-schema": "^4.2.0-beta.0",
