--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "@fastify/jwt": "^7.2.1",
+    "@fastify/type-provider-typebox": "^3.5.0",
     "@prisma/client": "5.3.1",
+    "@sinclair/typebox": "^0.31.15",
     "env-schema": "^5.2.0",
     "fastify": "^4.23.2",
     "fastify-plugin": "^4.5.1",
