--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
   },
   "dependencies": {
     "@fastify/jwt": "^7.2.1",
+    "@fastify/oauth2": "^7.4.0",
     "@fastify/type-provider-typebox": "^3.5.0",
     "@prisma/client": "5.3.1",
     "@sinclair/typebox": "^0.31.15",
+    "@types/simple-get": "^4.0.0",
     "env-schema": "^5.2.0",
     "fastify": "^4.23.2",
     "fastify-plugin": "^4.5.1",
     "http-errors": "^2.0.0",
+    "simple-get": "^4.0.1",
     "tsc-alias": "^1.8.8"
   },
   "devDependencies": {
