feat(oauth): google oauth 90%

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
     "start": "nodemon -r tsconfig-paths/register server.ts",
     "start:prod": "NODE_ENV=production node ./dist/server.js",
-    "prisma:migrate": "src/prisma migrate dev",
+    "prisma:migrate": "prisma migrate dev",
     "lint": "eslint \"**/*.ts\" --fix",
     "prettier": "npx prettier \"**/*.ts\" --write",
     "test": "echo \"Error: no test specified\" && exit 1"
