--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,14 +5,21 @@
         "jest": true
     },
     "extends": ["standard-with-typescript", "prettier"],
+    "plugins": ["simple-import-sort"],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
     "globals": {
-        "Config": true
+        "Config": true,
+        "DeepPartial": true,
+        "ValueOf": true,
+        "OptionalRecord": true,
+        "EnvMode": true
     },
     "rules": {
+        "simple-import-sort/imports": "error",
+        "simple-import-sort/exports": "error",
         "no-prototype-builtins": "off",
         "@typescript-eslint/no-floating-promises": "off",
         "@typescript-eslint/strict-boolean-expressions": "off"
