--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@fastify/jwt": "^7.2.1",
-    "@fastify/oauth2": "^7.4.0",
+    "@fastify/oauth2": "7.0.0",
     "@fastify/type-provider-typebox": "^3.5.0",
     "@prisma/client": "5.3.1",
     "@sinclair/typebox": "^0.31.15",
