feat(roles&access): add user routes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,8 @@
         "DeepPartial": true,
         "ValueOf": true,
         "OptionalRecord": true,
-        "EnvMode": true
+        "EnvMode": true,
+        "Pagination": true
     },
     "rules": {
         "simple-import-sort/imports": "error",
